--- a/backend/src/main/resources/relatorios/modelo_relatorio.jrxml
+++ b/backend/src/main/resources/relatorios/modelo_relatorio.jrxml
@@ -8,10 +8,10 @@
 
     <parameter name="TITULO_RELATORIO" class="java.lang.String"/>
 
-    <field name="nome" class="java.lang.String"/>
-    <field name="cpf" class="java.lang.String"/>
-    <field name="cidade" class="java.lang.String"/>
-    <field name="valor" class="java.lang.Double"/>
+    <field name="devedorNome" class="java.lang.String"/>
+    <field name="devedorDocumento" class="java.lang.String"/>
+    <field name="credorNome" class="java.lang.String"/>
+    <field name="requisitorioValorPrincipalTributavel" class="java.lang.String"/>
 
     <title>
         <band height="60">
@@ -27,10 +27,10 @@
 
     <detail>
         <band height="20">
-            <textField><reportElement x="0" y="0" width="150" height="20"/><textFieldExpression><![CDATA[$F{nome}]]></textFieldExpression></textField>
-            <textField><reportElement x="160" y="0" width="100" height="20"/><textFieldExpression><![CDATA[$F{cpf}]]></textFieldExpression></textField>
-            <textField><reportElement x="270" y="0" width="150" height="20"/><textFieldExpression><![CDATA[$F{cidade}]]></textFieldExpression></textField>
-            <textField><reportElement x="430" y="0" width="100" height="20"/><textFieldExpression><![CDATA[$F{valor}]]></textFieldExpression></textField>
+            <textField><reportElement x="0" y="0" width="150" height="20"/><textFieldExpression><![CDATA[$F{devedorNome}]]></textFieldExpression></textField>
+            <textField><reportElement x="160" y="0" width="100" height="20"/><textFieldExpression><![CDATA[$F{devedorDocumento}]]></textFieldExpression></textField>
+            <textField><reportElement x="270" y="0" width="150" height="20"/><textFieldExpression><![CDATA[$F{credorNome}]]></textFieldExpression></textField>
+            <textField><reportElement x="430" y="0" width="100" height="20"/><textFieldExpression><![CDATA[$F{requisitorioValorPrincipalTributavel}]]></textFieldExpression></textField>
         </band>
     </detail>
 </jasperReport>
